cmake_minimum_required(VERSION 3.10)
project(tnpquest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wno-sign-compare -Wno-unused-parameter")
if(UNIX)
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address")
endif()
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/src/*/*.cpp)
add_executable(tnpquest ${SOURCES})
target_include_directories(tnpquest PUBLIC ${PROJECT_SOURCE_DIR}/src/ncurses)
if(UNIX)
	target_link_libraries(tnpquest menu)
	target_link_libraries(tnpquest ncursesw)
elseif(WIN32)
	target_link_libraries(tnpquest pdcurses)
else()
	message(FATAL_ERROR "Unsupported platform")
endif()